--- a/package.json
+++ b/package.json
@@ -6,43 +6,19 @@
     "main": "src/index.ts",
     "license": "MIT",
     "scripts": {
-        "build": "rimraf dist/* && tsc -p \"tsconfig.json\" && vite build --watch false --mode production",
-        "watch": "vite build --watch",
-        "prepublishOnly": " npx tsconfig-to-prod",
-        "postpublish": "npx tsconfig-to-dev",
-        "test-prepublish": "npm run build && npx tsconfig-to-prod",
-        "test-postpublish": "npx tsconfig-to-dev"
+        "build": "kt-build",
+        "build-tests": "kt-build build-tests"
     },
     "files": [
         "src",
         "tsconfig.json"
     ],
     "dependencies": {
-        "kt-core": "^1.0.3",
         "types-for-adobe": "^7.2.2",
-        "typescript": "^4.6.4",
-        "vite-cep-plugin": "^1.1.12"
+        "typescript": "^4.6.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.9",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-classes": "^7.25.9",
-        "@babel/preset-env": "^7.26.9",
-        "@babel/preset-typescript": "^7.26.0",
-        "@rollup/plugin-babel": "^6.0.4",
-        "@rollup/plugin-commonjs": "^21.0.2",
-        "@rollup/plugin-image": "^2.1.1",
-        "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^13.1.3",
-        "@rollup/plugin-replace": "^4.0.0",
-        "@rollup/plugin-strip": "^3.0.4",
-        "@vitejs/plugin-legacy": "^6.0.1",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "command-line-args": "^6.0.1",
-        "kt-tsconfig-resolver": "^1.0.1",
-        "rimraf": "^3.0.2",
-        "rollup-plugin-postprocess": "^1.0.2",
-        "vite": "^6.1.1"
+        "kt-extendscript-builder": "^1.0.0",
+        "prettier": "^3.6.2"
     }
 }
