--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,27 @@
     "prettier.tabWidth": 4,
     "prettier.useTabs": false,
     "prettier.printWidth": 80,
-
-    "editor.tabSize": 4
+       "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 4,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#922154",
+        "activityBar.background": "#922154",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#0f1a06",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#922154",
+        "statusBar.background": "#69183c",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#922154",
+        "statusBarItem.remoteBackground": "#69183c",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#69183c",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#69183c99",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#69183c"
 }
