feat: add new launch configurations and tasks for testing in VSCode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,41 @@
             "script": "${workspaceFolder}/test/index.test.jsx",
             "hostAppSpecifier": "aftereffects",
             "hiddenTypes": ["prototype"]
+        },
+
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "PatternsTesting",
+            "script": "${workspaceFolder}/test/patterns.mixin.test.jsx",
+            "hostAppSpecifier": "aftereffects",
+            "hiddenTypes": ["prototype"]
+        },
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "Build & Run Tests",
+            "script": "${workspaceFolder}/dist.test/index.test.js",
+            "hiddenTypes": ["prototype"],
+            "preLaunchTask": "Build Tests",
+            "hostAppSpecifier": "aftereffects"
+        },
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "Debug Build & Run Tests",
+            "script": "${workspaceFolder}/dist.test/index.test.js",
+            "hiddenTypes": ["prototype"],
+            "preLaunchTask": "Debug Build Tests",
+            "hostAppSpecifier": "aftereffects"
+        },
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "Run Tests",
+            "script": "${workspaceFolder}/dist.test/index.test.js",
+            "hiddenTypes": ["prototype"],
+            "hostAppSpecifier": "aftereffects"
         }
     ]
 }
