chore: update tsconfig types to remove json2 and es-shim references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
         "lib": [],
         "sourceMap": true,
         "types": [
-            "./src/lib/json2",
-            "./src/lib/es-shim",
+            "./src/lib/kt-types",
             "./src/lib/patterns",
             "./node_modules/types-for-adobe/shared/global",
             "./node_modules/types-for-adobe/shared/JavaScript"
